deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domino
  namespace: domino
spec:
  selector:
    app.kubernetes.io/name: domino
  ports:
    - name: http
      port: 80
      targetPort: http
